--- a/index.html
+++ b/index.html
@@ -21,28 +21,28 @@
     <h1>Alura Midi</h1>
 
     <section class="teclado">
-        <button class="tecla tecla_pom">Pom</button>
-        <button class="tecla tecla_clap">Clap</button>
-        <button class="tecla tecla_tim">Tim</button>
+        <button onclick="alert('Pom')" classe="tecla tecla_pom">Pom</button>
+        <button onclick="alert('Clap')" classe="tecla tecla_clap">Clap</button>
+        <button onclick="alert('Tim')" classe="tecla tecla_tim">Tim</button>
 
-        <button class="tecla tecla_puff">Puff</button>
-        <button class="tecla tecla_splash">Splash</button>
-        <button class="tecla tecla_toim">Toim</button>
+        <button onclick="alert('PPuff')" classe="tecla tecla_puff">Puff</button>
+        <button onclick="alert('Splash')" classe="tecla tecla_splash">Splash</button>
+        <button onclick="alert('Toim')" classe="tecla tecla_toim">Toim</button>
 
-        <button class="tecla tecla_psh">Psh</button>
-        <button class="tecla tecla_tic">Tic</button>
-        <button class="tecla tecla_tom">Tom</button>
+        <button onclick="alert('Psh')" classe="tecla tecla_psh">Psh</button>
+        <button onclick="alert('Tic')" classe="tecla tecla_tic">Tic</button>
+        <button onclick="alert('Tom')" classe="tecla tecla_tom">Tom</button>
     </section>
 
-    <audio src="sounds/keyq.wav" id="som_tecla_pom"></audio>
-    <audio src="sounds/keyw.wav" id="som_tecla_clap"></audio>
-    <audio src="sounds/keye.wav" id="som_tecla_tim"></audio>
-    <audio src="sounds/keya.wav" id="som_tecla_puff"></audio>
-    <audio src="sounds/keys.wav" id="som_tecla_splash"></audio>
-    <audio src="sounds/keyd.wav" id="som_tecla_toim"></audio>
-    <audio src="sounds/keyz.wav" id="som_tecla_psh"></audio>
-    <audio src="sounds/keyx.wav" id="som_tecla_tic"></audio>
-    <audio src="sounds/keyc.wav" id="som_tecla_tom"></audio>
+    <audio  src="sounds/keyq.wav" id="som_tecla_pom"></audio>
+    <audio  src="sounds/keyw.wav" id="som_tecla_clap"></audio>
+    <audio  src="sounds/keye.wav" id="som_tecla_tim"></audio>
+    <audio  src="sounds/keya.wav" id="som_tecla_puff"></audio>
+    <audio  src="sounds/keys.wav" id="som_tecla_splash"></audio>
+    <audio  src="sounds/keyd.wav" id="som_tecla_toim"></audio>
+    <audio  src="sounds/keyz.wav" id="som_tecla_psh"></audio>
+    <audio  src="sounds/keyx.wav" id="som_tecla_tic"></audio>
+    <audio  src="sounds/keyc.wav" id="som_tecla_tom"></audio>
 
 </body>
 </html>
